# Task-Tracker

./: .dockerignore  .env  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: login.py  tasks.py  users.py
app/core/: config.py  security.py
app/crud/: __init__.py  base.py  crud_task.py  crud_user.py
app/db/: base.py  base_class.py  session.py
app/models/: __init__.py  task.py  user.py  user_task.py
app/schemas/: __init__.py  task.py  user.py
migrations/: env.py
migrations/versions/: 21d993997853_initial.py  355a9617c26e_initial.py  636a173fd164_initial.py  c1cade25dca4_initial.py  c631d0901021_initial.py  f7879dd97643_initial.py
tests/: conftest.py
tests/api/api_v1/: test_tasks.py  test_users.py
tests/crud/: __init__.py  test_tasks.py  test_users.py
tests/utils/: tasks.py  users.py  utils.py
