[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["sanek <alexandr.panteleev2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
aiohttp = "^3.8.4"
asyncpg = "^0.27.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.16"
alembic = "^1.11.1"
passlib = "^1.7.4"
python-jose = "^3.3.0"
email-validator = "^2.0.0.post2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

